# Kisuke

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_AUDIT_REPORT.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENT_INDEX.md  FINAL_ARCHITECTURE_AUDIT.md  FINAL_LAUNCH_FIX_REPORT.md  FINAL_PRE_RELEASE_AUDIT.md  FINAL_QA_REPORT.md  FINAL_REPOSITORY_STRUCTURE_REPORT.md  FINAL_WEBSITE_AUDIT.md  IMPLEMENTATION_CONTRACT.md  KISUKE_ARCHITECTURE.md  LICENSE  M10_IMPLEMENTATION_REPORT.md  M11_DOCS_REPORT.md  M12_ARCHITECTURE_REPORT.md  M13_DOWNLOAD_REPORT.md  M14_ROADMAP_REPORT.md  M15_ABOUT_REPORT.md  M1_VERIFICATION_REPORT.md  M2_VERIFICATION_REPORT.md  M3_VERIFICATION_REPORT.md  M4_VERIFICATION_REPORT.md  M5_VERIFICATION_REPORT.md  M6_VERIFICATION_REPORT.md  M7_VERIFICATION_REPORT.md  M8_VERIFICATION_REPORT.md  M9_VERIFICATION_REPORT.md  MASTER_SPECIFICATION.md  PRE_RELEASE_FIX_REPORT.md  PROJECT_MANIFEST.md  README.md  SECURITY.md  TOP_TIER_GUIDE.md  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adrs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  README.md  TEMPLATE.md
architecture/: README.md  component-diagram.md  entity-relationship.md  system-context.md
architecture/sequence-diagrams/: capture-flow.md  resume-flow.md  review-flow.md  search-flow.md
architecture/state-machines/: decision.md  project.md  review.md  task.md
docs/: MASTER_SPECIFICATION.md  README.md
docs/architecture/: 04-domain-model.md  05-information-architecture.md  06-data-model.md  07-user-flows.md
docs/engineering/: 08-cli-spec.md  09-integrations.md  10-ai-abstraction.md  11-security.md  12-engineering-architecture.md
docs/execution/: 13-roadmap.md  14-implementation-plan.md  15-coding-guidelines.md  16-testing-strategy.md  (+4 more)
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_add_migration_tracking.down.sql  002_add_migration_tracking.up.sql
qa-screenshots/: audit-results.json  phase2-results.json  phase3-results.json  phase4-results.json  phase5-results.json
reports/: m1-coverage.txt  m2-coverage.txt  m3-coverage.txt  m4-coverage.txt  m5-coverage.txt  m6-coverage.txt
rfcs/: README.md  TEMPLATE.md
scripts/: bootstrap.sh  check.sh
templates/: attachment.md  cookbook.md  decision.md  knowledge.md  meeting.md  mission.md  person.md  project.md  resource.md  review.md  task.md
tests/: test_foundation.py
website/: DESIGN_SYSTEM.md  SITEMAP.md  WIREFRAMES.md  package-lock.json  package.json  pnpm-lock.yaml
(+212 files in other folders)
