[project]
name = "kisuke"
version = "0.1.0"
description = "Local-first context reconstruction engine"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true